# GS_GPGPU

./: .gitignore  CMakeLists.txt
App/: CMakeLists.txt
App/source/: main.cpp
